--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -2,6 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
+
+
 /* Reset some default styles */
 * {
   margin: 0;
@@ -12,21 +14,14 @@
 
 /* Set a theme */
 body {
-  background-color: #f0f4f8;
-  color: #333;
+
+  background-color: #F7F7FF ;
+  color: #070600 ;
+  font-family: Arial, sans-serif;
   line-height: 1.6;
   font-size: 16px;
 }
 
-/* Styling links */
-a {
-  text-decoration: none;
-  color: #333;
-}
-
-a:hover {
-  color: #007bff;
-}
 
 /* Container for centering content */
 .container {
